Refactored the components. Behaviour of role elements is now composable. PerspectivesContainer supports the RoleForm.

--- a/src/components.css
+++ b/src/components.css
@@ -3,3 +3,16 @@
   border-width: medium!important;
   border-style: dotted!important;
 }
+
+/* These color codes are taken from bootstrap. See https://getbootstrap.com/docs/5.0/utilities/colors/#variables
+for a discussion about variables and sass. */
+
+.failure:focus{
+  outline: none;
+  box-shadow: 0 0 0 5px #dc3545; /* $red */
+}
+
+.dropHere{
+  outline: none;
+  box-shadow: 0 0 0 5px #0dcaf0; /* $cyan */
+}
