Fixed selection bug due to browser stylesheet's :focus-visible pseudo selector.
There is some heuristic that decides when to show the outline; it worked 
out that it did show for selecting a card with arrow keys, but not by 
clicking on it.

--- a/src/components.css
+++ b/src/components.css
@@ -16,3 +16,9 @@ for a discussion about variables and sass. */
   outline: none;
   box-shadow: 0 0 0 5px #0dcaf0; /* $cyan */
 }
+
+.card:focus {
+	outline-color: rgb(0, 95, 204);
+	outline-style: auto;
+	outline-width: 1px;
+}
