Controls for the PerspectiveForm.

--- a/src/components.css
+++ b/src/components.css
@@ -22,3 +22,8 @@ for a discussion about variables and sass. */
 	outline-style: auto;
 	outline-width: 1px;
 }
+
+.navbarCard {
+  padding-top: 4px!important;
+  padding-bottom: 4px!important;
+}
