--- a/src/components.css
+++ b/src/components.css
@@ -27,3 +27,7 @@ for a discussion about variables and sass. */
   padding-top: 4px!important;
   padding-bottom: 4px!important;
 }
+
+.widget {
+  flex-grow: 1;
+}
